# lamport_ots

./: Cargo.toml  LICENSE  README.md
src/: lamport_signature.rs  lib.rs
tests/: data.txt  tests.rs
